# zerodha-cli

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  quick-setup.md  test_config_debug.rs
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
cli/src/commands/: auth.rs  gtt.rs  instruments.rs  margins.rs  mod.rs  orders.rs  portfolio.rs  quotes.rs  shell.rs  status.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/api/: client.rs  mod.rs  rate_limiter.rs
core/src/auth/: auth.rs  mod.rs
core/src/cache/: cache.rs  mod.rs
core/src/cli/: mod.rs
core/src/config/: mod.rs
core/src/error/: mod.rs
core/src/models/: mod.rs
core/src/output/: mod.rs  output.rs
core/src/shell/: mod.rs  shell.rs
core/src/validation/: mod.rs
docs/: Architecture.md  Backend-Plan.md  Deployment-Report.md  Frontend-Plan.md  Requirements.md  Review-Report.md  Technical-Design.md  Test-Report.md  setup.md
src/: cache.rs  config.rs  error.rs  http.rs  lib.rs  main.rs  validation.rs
src/api/: client.rs  endpoints.rs  mod.rs  types.rs
src/commands/: auth.rs  gtt.rs  instruments.rs  margins.rs  mod.rs  orders.rs  portfolio.rs  quotes.rs  shell.rs  status.rs
src/output/: json.rs  mod.rs  table.rs
src/utils/: color.rs  format.rs  mod.rs
