[package]
name = "zerodha-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "kite"
path = "src/main.rs"

[dependencies]
zerodha-cli-core.workspace = true
clap.workspace = true
clap_complete = "4.5"
comfy-table.workspace = true
anyhow.workspace = true
serde_json.workspace = true

# Runtime and logging
tokio.workspace = true
tracing-subscriber.workspace = true

# Shell
rustyline = "14.0"
shellwords = "1.1.0"

# Config parsing
toml = "0.8"
