[package]
name = "zerodha-cli-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
toml.workspace = true
dirs.workspace = true
webbrowser.workspace = true
csv.workspace = true
governor.workspace = true
nonzero_ext.workspace = true

# CLI dependencies (used in core for output formatting)
comfy-table.workspace = true
rustyline.workspace = true

# Utilities
hex.workspace = true
sha2.workspace = true

[dev-dependencies]
mockito = "1.5"
rstest = "0.21"
